--- a/app/components/app.module.css
+++ b/app/components/app.module.css
@@ -11,7 +11,7 @@
 .header {
   min-width: 350px;
   padding: 10px;
-  margin: 10px;
+  margin-top: 10px;
   border: 1px solid white;
   border-radius: 12px;
 }
@@ -43,7 +43,8 @@
   color: grey;
 }
 
-.calendar__day:hover {
-  color: white;
-  cursor: pointer;
+.calendar__day__outOfYear {
+  padding: 0 25px;
+  line-height: 0.6;
+  color: rgb(125, 95, 255)
 }
